--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
     "nodemon": "^3.1.10",
+    "puppeteer": "^24.17.1",
     "string-similarity": "^4.0.4"
   },
   "type": "module"
